Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -317,7 +317,7 @@
         "\n",
         "En la actualidad existen muchos manejadores de bases de datos (incluso algunos no-relacionales). Existen desde los más básicos, hasta los más completos, la elección del manejador de base de datos depende del contexto para el que se vaya a usar, es decir: recursos, seguridad, desempeño, presupuesto, etc.\n",
         "\n",
-        "La gran mayoria de las aplicaciones actualmente funcionan mediante la arquitectura **cliente-servidor**, la cual nos dice que una parte de la aplicación se hospeda en un servidor y la otra parte en un cliente y normalmente la base de datos se almacena en otro (o a veces el mismo) servidor.\n",
+        "La gran mayoría de las aplicaciones actualmente funcionan mediante la arquitectura **cliente-servidor**, la cual nos dice que una parte de la aplicación se hospeda en un servidor y la otra parte en un cliente y normalmente la base de datos se almacena en otro (o a veces el mismo) servidor.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/base.jpg?raw=1\" width=\"600\"> \n",
@@ -370,8 +370,80 @@
         "* `UPDATE`: comando que nos permite actualizar la información dentro de la base de datos.\n",
         "* `DROP`: este comando es usado para eliminar desde tabla, hasta una base de datos completa.\n",
         "* `SELECT`: permite seleccionar un conjunto de datos (es el equivalente a la proyección).\n",
-        "* `WHERE`: más que un comando es una clausula, que en combinación con `SELECT`, permite seleccionar solo los datos que cumplan con un determinado criterio."
+        "* `WHERE`: más que un comando es una clausula, que en combinación con `SELECT`, permite seleccionar solo los datos que cumplan con un determinado criterio.\n",
+        "\n",
+        "Dado que *MySQL* es un manejador de bases de datos, esto significa que además de permitirnos crear la base de datos y manipular los mismo cuenta con un **sistema de usuarios y privilegios** que permite administrar el acceso a la información, para mayor información al respecto revisar el siguiente [enlace](https://dev.mysql.com/doc/refman/8.0/en/database-use.html)."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejemplo\n",
+        "\n",
+        "En esta sección vamos a ver un poco de la labor que corresponde al diseñador de la base de datos (arquitecto), esta labor escapa un poco a los temas del curso, sin embargo es buena idea conocer como es que construye el **esquema** (*schema*) de la base de datos.\n",
+        "\n",
+        "Para mostrar como usar los comandos más comunes al crear un esquema, tomemos el siguiente modelo relacional.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/comandos.png?raw=1\" width=\"800\"> \n",
+        "</center>\n"
+      ],
+      "metadata": {
+        "id": "T0lgcILSPwDx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `CREATE`\n",
+        "\n",
+        "De acuerdo a las restricciones de integridad, para poder crear el esquema de la imagen, es necesario primero crear la tabla **ESPECIALIDADES**, ya que la misma es referenciada (llave foranea) por la tabla **TUTORES**. Para crear la tabla **ESPECIALIDAES** hacemos uso del comando `CREATE`.\n",
+        "\n",
+        "`CREATE TABLE ESPECIALIDADES (id_especialidad INT AUTO_INCREMENT PRIMARY KEY, nombre_especialidad CHAR(40) NOT NULL);`\n",
+        "\n",
+        "La semántica de este comando indica que la tabla **ESPECIALIDADES** tiene 2 atributos llamados **id_especialidad** y **nombre_especialidad**, el primero es de tipo `int` y es llave primaria y el segundo es de tipo `varchar`.\n",
+        "\n",
+        "La siguiente tabla que podemos crear es la tabla de **TUTORES**.\n",
+        "\n",
+        "`CREATE TABLE TUTORES (id_tutor INT AUTO_INCREMENT PRIMARY KEY, nombre_tutor CHAR(40), id_especialidad INT NOT NULL, \n",
+        "INDEX (id_especialidad), FOREIGN KEY (id_especialidad) REFERENCES ESPECIALIDADES(id_especialidad));`\n",
+        "\n",
+        "De manera similar esta tabla contiene los atributos **id_tutor** (que es llave primaria), **nombre_tutor** e **id_especialidad** que es llave foránea y hace referencia a la tabla **ESPECIALIDADES**.\n",
+        "\n",
+        "La tabla ALUMNOS, se crea mediante la siguiente instrucción.\n",
+        "\n",
+        "`CREATE TABLE ALUMNOS (num_cuenta INT AUTO_INCREMENT PRIMARY KEY, nombre VARCHAR(30));`\n",
+        "\n",
+        "Y por último creamos la tabla **TUTORIAS** que se diferencía un poco de las tablas anteriores ya que almacena la relación que guardan las tablas **ALUMNOS** y **TUTORES**, ademas de que consta de una llave primaria compuesta conformada por los atributos **id_tutoria**, **num_cuenta** y **id_tutor**.\n",
+        "\n",
+        "`CREATE TABLE TUTORIAS (id_tutoria INT AUTO_INCREMENT, num_cuenta INT NOT NULL, id_tutor INT NOT NULL, \n",
+        "PRIMARY KEY(id_tutoria, num_cuenta, id_tutor),\n",
+        "INDEX (num_cuenta), FOREIGN KEY (num_cuenta) REFERENCES ALUMNOS(num_cuenta),\n",
+        "INDEX (id_tutor), FOREIGN KEY (id_tutor) REFERENCES TUTORES(id_tutor));`"
+      ],
+      "metadata": {
+        "id": "HihJh_SabFlp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `INSERT`\n",
+        "\n",
+        "Una vez que las ya fue creado el esquema, podemos comenzar a llenar las tablas con los datos necesarios.\n",
+        "\n",
+        "`INSERT INTO ESPECIALIDADES (nombre_especialidad) VALUES ('actuaria'),('ciencias de la computacion'),('matematicas'),('fisica'),('biologia'),('ciencia de datos');`\n",
+        "\n",
+        "`INSERT INTO TUTORES (nombre_tutor, id_especialidad) VALUES ('Mario Molina', 1),('Miguel de Icaza', 2),('Isaac Newton', 3),('Albert Einstein', 4),('Charles Darwin', 5),('Mark Musk', 6);`\n",
+        "\n",
+        "`INSERT INTO ALUMNOS (nombre) VALUES ('Mike'),('Pedro'),('Peter'),('Almendra'),('Alvaro'), ('Canek'),\n",
+        "('Sonia'),('Arturo'),('Gisel'),('Alfa');`\n",
+        "\n",
+        "`INSERT INTO TUTORIAS (num_cuenta, id_tutor) VALUES (1,6),(2,2),(3,1),(4,5),(5,3),(6,6),(7,2),(8,6),(9,5),(10,3);`"
+      ],
+      "metadata": {
+        "id": "Vn3fPBxXbQ7Q"
+      }
     },
     {
       "cell_type": "markdown",
@@ -380,10 +452,10 @@
         "\n",
         "Hasta este momento hemos usado *MySQL*, a nivel usuario es decir, hemos realizado las consultas a la base de datos directamente con el manejador de la base de datos.\n",
         "\n",
-        "Sin embargo la mayoria de las aplicaciones o programas realizan estas consultas desde un lenguaje de alto nivel (como lo es *Python*), para llevar a cabo esta labor son necesarios tres elementos:\n",
+        "Sin embargo la mayoría de las aplicaciones o programas realizan estas consultas desde un lenguaje de alto nivel (como lo es *Python*), para llevar a cabo esta labor son necesarios tres elementos:\n",
         "\n",
-        "*   **La base de datos en un servidor**: para poder acceder desde cualquier punto de la red (internet) a nuestra base de datos, es necesario ubicar esta base de datos en un servidor que cuente con una *IP* publica y las respectivas credenciales (usuario, contaseña, puerto).\n",
-        "*   **Conector**: el conector es una paqueteria (*API*) que nos perite indicarle al lenguaje (en este caso *Python*), que vamos a establecer una conexion con la base de datos.\n",
+        "*   **La base de datos en un servidor**: para poder acceder desde cualquier punto de la red (internet) a nuestra base de datos, es necesario ubicar esta base de datos en un servidor que cuente con una *IP* publica y las respectivas credenciales (usuario, contraseña, puerto).\n",
+        "*   **Conector**: el conector es una paquetería (*API*) que nos perite indicarle al lenguaje (en este caso *Python*), que vamos a establecer una conexión con la base de datos.\n",
         "*   **Algoritmo**: finalmente necesitamos el código que nos permita acceder y manipular los datos de la base de datos desde el lenguaje de alto nivel.\n",
         "\n",
         "\n",
