Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -352,7 +352,8 @@
         "\n",
         "* Es un manejador de bases de datos relacional.\n",
         "* Manejador de código abierto, es decir que cualquiera puede descargar el código fuente.\n",
-        "* A la par de *Oracle, Microsoft SQL Server, MySQL* es de los manejadores mas populares para el desarrollo web."
+        "* A la par de *Oracle, Microsoft SQL Server, MySQL* es de los manejadores mas populares para el desarrollo web.\n",
+        "* Permite crear y **administrar usuarios** para el acceso a los datos dentro de la base."
       ]
     },
     {
@@ -381,6 +382,12 @@
         "## Ejemplo\n",
         "\n",
         "En esta sección vamos a ver un poco de la labor que corresponde al diseñador de la base de datos (arquitecto), esta labor escapa un poco a los temas del curso, sin embargo es buena idea conocer como es que construye el **esquema** (*schema*) de la base de datos.\n",
+        "\n",
+        "Es importante mencionar que el acceso a los comandos que proporciona *MySQL* **depende de los privilegios que tenga el usuario en cuestión**. Por ejemplo un usuario que solo tenga privilegios para cosultar datos en una determinada base de datos no puede crear tablas dentro de la misma.\n",
+        "\n",
+        "Este sistema de privilegios tiene la intención de delegar solo los privilegios pertinentes al usuario, para cumplir la labor que le fue asignada a este usuario.\n",
+        "\n",
+        "En el caso del ejemplo que hemos usado en clase, el usuario *manejo*, unicamente tiene acceso la base *FCiencias* y dentro de la misma únicamente tiene privilegios par ejecutar el comando `SELECT`.\n",
         "\n",
         "Para mostrar como usar los comandos más comunes al crear un esquema, tomemos el siguiente modelo relacional.\n",
         "\n",
@@ -432,17 +439,181 @@
         "\n",
         "Una vez que las ya fue creado el esquema, podemos comenzar a llenar las tablas con los datos necesarios.\n",
         "\n",
+        "A continuación se insertan los datos que debe contener la tabla **ESPECIALIDADES**.\n",
+        "\n",
         "`INSERT INTO ESPECIALIDADES (nombre_especialidad) VALUES ('actuaria'),('ciencias de la computacion'),('matematicas'),('fisica'),('biologia'),('ciencia de datos');`\n",
         "\n",
+        "Para la tabla **TUTORES**, estos son los datos que se ingresan en la misma. Es importante notar que el atributo **id_especialidad**, es una llave foránea.\n",
+        "\n",
         "`INSERT INTO TUTORES (nombre_tutor, id_especialidad) VALUES ('Mario Molina', 1),('Miguel de Icaza', 2),('Isaac Newton', 3),('Albert Einstein', 4),('Charles Darwin', 5),('Mark Musk', 6);`\n",
+        "\n",
+        "Y para el caso de ALUMNOS y TUTORIAS estos son lo datos\n",
         "\n",
         "`INSERT INTO ALUMNOS (nombre) VALUES ('Mike'),('Pedro'),('Peter'),('Almendra'),('Alvaro'), ('Canek'),\n",
         "('Sonia'),('Arturo'),('Gisel'),('Alfa');`\n",
         "\n",
-        "`INSERT INTO TUTORIAS (num_cuenta, id_tutor) VALUES (1,6),(2,2),(3,1),(4,5),(5,3),(6,6),(7,2),(8,6),(9,5),(10,3);`"
+        "`INSERT INTO TUTORIAS (num_cuenta, id_tutor) VALUES (1,6),(2,2),(3,1),(4,5),(5,3),(6,6),(7,2),(8,6),(9,5),(10,3);`\n",
+        "\n",
+        "En el caso de las **TUTORIAS**, es de recalcar que ambos atributos **num_cuenta** y **id_tutor** son llaves foráneas que a su vez forman parte de la llave compuesta **(id_tutoria, num_cuenta, id_tutor)**.\n",
+        "\n",
+        "En todas estas tablas **la llave primaria se genera de manera automática** al momento de insertar cada elemento, pero no siempre debe ser así.\n",
+        "\n"
       ],
       "metadata": {
         "id": "Vn3fPBxXbQ7Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Autenticación de usuario\n",
+        "\n",
+        "Una vez que los datos ya se almacenaron en la base de datos, lo siguiente es autenticarse en la base y seleccionar la base de datos correcta, para ello lo primero que necesitamos es conocer la dirección del servidor y las credenciales de acceso al mismo.\n",
+        "\n",
+        "Haciendo uso del cliente de *MySQL*, proporcionamos estos datos así.\n",
+        "\n",
+        "`mysql -u manejo -p -h hpc-matematicas-z.fciencias.unam.mx`\n",
+        "\n",
+        "Se nos pide la contraseña (*prometeo*) y lo siguiente es seleccionar la base *FCiencias*, mediante el siguiente comando de *MySQL*.\n",
+        "\n",
+        "`use FCiencias;`\n",
+        "\n",
+        "Ya que seleccionamos la base *FCiencias*, ahora podemos listar las tablas que contiene la misma mediante el siguiente comando.\n",
+        "\n",
+        "`show tables;`\n",
+        "\n",
+        "Y el resultado debe ser algo similar a lo que se muestra en la siguiente imagen.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/tables.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "HPDLgZa9_4q6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `SELECT` (consultas)\n",
+        "\n",
+        "Una vez que ya nos autenticamos y seleccionamos la base de datos, ahora podemos realizar consultas (*querys*) a la información contenida dentro de la misma.\n",
+        "\n",
+        "Para conocer todos lo registros de la tabla **ALUMNOS**, basta con ejecutar la siguiente consulta.\n",
+        "\n",
+        "`select * from ALUMNOS;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/ALUMNOS.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GEwYhEm8HIxL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Producto cartesiano\n",
+        "\n",
+        "Para realizar un producto cartesiano (como los vistos en álgebra relacional) es necesario ejecutar el siguiente comando.\n",
+        "\n",
+        "`select * from ALUMNOS, TUTORES;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/cartesiano.png?raw=1\" width=\"600\"> \n",
+        "</center>"
+      ],
+      "metadata": {
+        "id": "NcSUsOKSNZ9d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `NATURAL JOIN`\n",
+        "\n",
+        "La tabla TUTORES contiene la siguiente información.\n",
+        "\n",
+        "`select * from TUTORES;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/tutores.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "De la imagen (y del DER) podemos notar que el atributo **id_especialidad** es una llave foránea al catalogo de **ESPECIALIDADES**, por lo que, con un simple `NATURAL JOIN` podemos obtener información más tangible.\n",
+        "\n",
+        "`select id_tutor, nombre_tutor, nombre_especialidad from TUTORES natural join ESPECIALIDADES;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/njoin1.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "La tabla TUTORIAS es una relación que esta compuesta por elementos de la tabla ALUMNOS y de la tabla TUTORES, así que la información en la misma luce de la siguiente manera\n",
+        "\n",
+        "`select * from TUTORIAS;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/tutorias.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "Sin emabargo estos valores no dicen mucho de la información, sin embargo podemos realizar un NATURAL JOIN con las tablas adecuadas para obtener la información deseada.\n",
+        "\n",
+        "`select id_tutoria, num_cuenta, nombre, nombre_tutor from TUTORIAS natural join ALUMNOS natural join TUTORES;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/njoin2.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "Ahora ya obtubimos de manera más clara el **nombre del tutor de cada alumno**, así como número de cuenta."
+      ],
+      "metadata": {
+        "id": "WohkLURvNiRR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Fuciones de agregación\n",
+        "\n",
+        "Para poder contar el número de alumnos es tan sencillo como ejecutar el siguiente comando.\n",
+        "\n",
+        "`select count(*) from ALUMNOS;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/COUNT.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "Supongamos que deseamos ver a todos los alumnos con su respectivo tutor, el nombre de la especialidad y además los **queremos ver ordenados (*order by*) por el atributo id_especialidad**.\n",
+        "\n",
+        "`select id_tutoria, num_cuenta, nombre, nombre_tutor, id_especialidad from TUTORIAS natural join ALUMNOS natural join TUTORES order by id_especialidad;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/orderby.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n",
+        "Dado que podemos anidar consultas y todo resultado es una tabla, podemos realizar lo siguiente. Imaginemos que **necesitamos agrupar (*group by*) a los alumnos por especialidad y saber la cantidad de alumnos que pertenecen a una determinada especialidad**, esto lo podemos saber mediante la siguiente consulta.\n",
+        "\n",
+        "`select nombre_especialidad, id_especialidad, count(id_especialidad) from TUTORIAS natural join TUTORES natural join ESPECIALIDADES group by id_especialidad;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/groupby.png?raw=1\" width=\"1000\"> \n",
+        "</center>\n",
+        "\n",
+        "En caso de que necesitemos **renombrar (*as*)** columna que indica el número de alumnos por especialida se llame de otra forma, ejecutamos la siguiente consulta.\n",
+        "\n",
+        "`select nombre_especialidad, id_especialidad, count(id_especialidad) as cuantos from TUTORIAS natural join TUTORES natural join ESPECIALIDADES group by id_especialidad;`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/groupas.png?raw=1\" width=\"1000\"> \n",
+        "</center>"
+      ],
+      "metadata": {
+        "id": "uR7uI2gvR1Ww"
       }
     },
     {
