Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -550,7 +550,7 @@
         "`select id_tutor, nombre_tutor, nombre_especialidad from TUTORES natural join ESPECIALIDADES;`\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/njoin1.png?raw=1\" width=\"600\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/njoin1.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
         "\n",
         "La tabla TUTORIAS es una relación que esta compuesta por elementos de la tabla ALUMNOS y de la tabla TUTORES, así que la información en la misma luce de la siguiente manera\n",
@@ -561,15 +561,15 @@
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/tutorias.png?raw=1\" width=\"600\"> \n",
         "</center>\n",
         "\n",
-        "Sin emabargo estos valores no dicen mucho de la información, sin embargo podemos realizar un NATURAL JOIN con las tablas adecuadas para obtener la información deseada.\n",
+        "Estos valores no dicen mucho de la información, sin embargo podemos realizar un NATURAL JOIN con las tablas adecuadas para obtener la información deseada.\n",
         "\n",
         "`select id_tutoria, num_cuenta, nombre, nombre_tutor from TUTORIAS natural join ALUMNOS natural join TUTORES;`\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/njoin2.png?raw=1\" width=\"600\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/njoin2.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
         "\n",
-        "Ahora ya obtubimos de manera más clara el **nombre del tutor de cada alumno**, así como número de cuenta."
+        "Ahora ya obtubimos de manera más clara el **nombre del tutor de cada alumno**, así como su número de cuenta."
       ],
       "metadata": {
         "id": "WohkLURvNiRR"
@@ -596,7 +596,7 @@
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/orderby.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
         "\n",
-        "Dado que podemos anidar consultas y todo resultado es una tabla, podemos realizar lo siguiente. Imaginemos que **necesitamos agrupar (*group by*) a los alumnos por especialidad y saber la cantidad de alumnos que pertenecen a una determinada especialidad**, esto lo podemos saber mediante la siguiente consulta.\n",
+        "Dado que podemos anidar consultas y todo resultado es una tabla, podemos realizar lo siguiente. Imaginemos que **necesitamos agrupar (*group by*) a los alumnos por especialidad y saber la cantidad de alumnos que pertenecen a una determinada especialidad**, esto lo podemos saber mediante realizando esta consulta.\n",
         "\n",
         "`select nombre_especialidad, id_especialidad, count(id_especialidad) from TUTORIAS natural join TUTORES natural join ESPECIALIDADES group by id_especialidad;`\n",
         "\n",
@@ -604,7 +604,7 @@
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/groupby.png?raw=1\" width=\"1000\"> \n",
         "</center>\n",
         "\n",
-        "En caso de que necesitemos **renombrar (*as*)** columna que indica el número de alumnos por especialida se llame de otra forma, ejecutamos la siguiente consulta.\n",
+        "En caso de que necesitemos **renombrar (*as*)** columna que indica el número de alumnos por especialidad, ejecutamos la siguiente consulta.\n",
         "\n",
         "`select nombre_especialidad, id_especialidad, count(id_especialidad) as cuantos from TUTORIAS natural join TUTORES natural join ESPECIALIDADES group by id_especialidad;`\n",
         "\n",
@@ -614,6 +614,56 @@
       ],
       "metadata": {
         "id": "uR7uI2gvR1Ww"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Resultados temporales\n",
+        "\n",
+        "Conforme vamos obteniendo más información dentro de la base de datos, a veces es necesario generar resultados temporales (*temporary table*) ya sea por que **vamos a consultar esa información constantemente** (mientras la sesión este abierta) o debido a que las consultas se pueden volver muy complejas.\n",
+        "\n",
+        "Imaginemos que nos piden **identificar el nombre de la especialidad que cuenta con el máximo número de alumnos inscritos**. De acuerdo al *DER* esta información se encuentra en diferentes tablas, además necesitaremos hacer uso de la función de agregación *max*.\n",
+        "\n",
+        "Así que lo ideal es **partir esta consulta en consultas más sencillas** y atómicas.\n",
+        "\n",
+        "Primero vamos a generar una consulta que contenga a todos los alumnos con su respectivo tutor y el nombre de la especialidad. De acuerdo al DER, esta información se encuentra en las tablas ALUMNOS, TUTORIAS, TUTORES y ESPECIALIDADES.\n",
+        "\n",
+        "De tal manera que de una vez podemos proyectar únicamente los datos que vamos a necesitar, además de **generar una tabla temporal llamada TEMP (*create temporary table TEMP as*)**, mediante el siguiente comando.\n",
+        "\n",
+        "`create temporary table TEMP as select nombre_especialidad, id_especialidad, count(id_especialidad) as cuantos from TUTORIAS natural join TUTORES natural join ESPECIALIDADES group by id_especialidad;`\n",
+        "\n",
+        "El resultado de esta sentencia y de consultar todos los datos contenidos en **TEMP**, sería el siguiente.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/temp.png?raw=1\" width=\"1000\"> \n",
+        "</center>\n",
+        "\n",
+        "Ahora únicamente resta usar la función de agregación *max* sobre el atributo *cuantos* de la tabla temporal TEMP para saber cual es la especialidad con el máximo número de alumnos inscritos y ademas la podemos guardar en una variable temporal mediante el siguiente comando.\n",
+        "\n",
+        "`set @maximo = (select max(cuantos) from TEMP);`\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/max.png?raw=1\" width=\"1000\"> \n",
+        "</center>\n",
+        "\n",
+        "Y por último solo hay que consultar la tabla TEMP indicando que necesitamos mostrar el máximo valor de la columna **cuantos**.\n",
+        "\n",
+        "`select nombre_especialidad, cuantos from TEMP where cuantos = @maximo;`\n",
+        "\n",
+        "El resultado de esta consulta es precisamente la información que necesitabamos conocer.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/consultota.png?raw=1\" width=\"1000\"> \n",
+        "</center>\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2hdENcuJgODs"
       }
     },
     {
