Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -291,7 +291,7 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Manejadores</i></h1>\n",
+        "  <h1 align=\"center\"><i>Estándares para el intercambio de información</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M. en C. Miguel Angel Pérez León</i></h5>\n",
@@ -309,18 +309,27 @@
       "source": [
         "# Introducción\n",
         "\n",
-        "Dado lo ya mencionado en secciones pasadas, la importancia de las bases de datos debe ser clara para este momento.\n",
+        "Al manipular datos a menudo es necesario intercambiar datos entre disintos usuarios, sistemas operativos, manejadores de bases de datos, etc.\n",
         "\n",
-        "Un manejador de bases de datos es un programa (algoritmo) que nos permite acceder a los datos de manera eficiente, organizada y sobretodo que no viola las restricciones mencionadas para el modelo relacional.\n",
+        "Es por este motivo que surgen los estándares para el intercambio de información, mediante estos estándares podemos asumir que los actores que formen parte del intercambio de información seguiran las mismas reglas.\n",
         "\n",
-        "Para lograr esta eficiencia, un manejador de datos emplea **algoritmos de búsqueda, algoritmos de ordenamientos, arboles de decisión, expresiones regulares, tablas de dispersión**, entre otros.\n",
+        "El ejemplo más común actualmente de este tipo de estándares son las facturas digitales o electrónicas.\n",
         "\n",
-        "En la actualidad existen muchos manejadores de bases de datos (incluso algunos no-relacionales). Existen desde los más básicos, hasta los más completos, la elección del manejador de base de datos depende del contexto para el que se vaya a usar, es decir: recursos, seguridad, desempeño, presupuesto, etc.\n",
+        "Toda factura (sin importar si es digital o tradicional) contiene la misma información:\n",
         "\n",
-        "La gran mayoría de las aplicaciones actualmente funcionan mediante la arquitectura **cliente-servidor**, la cual nos dice que una parte de la aplicación se hospeda en un servidor y la otra parte en un cliente y normalmente la base de datos se almacena en otro (o a veces el mismo) servidor.\n",
+        "*   Empresa.\n",
+        "*   Monto.\n",
+        "*   Concepto.\n",
+        "*   Domicilio Fiscal.\n",
+        "*   RFC.\n",
+        "*   etc.\n",
+        "\n",
+        "No toda factura luce igual, sin embargo si contienen (o deberían contener) la misma información, así que es por este motivo que para fines de fiscalización, orden y almacenamiento toda factura electrónica se basa en un documento llamado xml, mismo documento que contiene un \"resumen\" con los datos de la facutura.\n",
+        "\n",
+        "Además estos datos se almacenan siguiendo el estandar (reglas) del formato xml.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/base.jpg?raw=1\" width=\"600\"> \n",
+        "<img src=\"https://solucionfactible.com/sfic/manuales/lecciones/emision/emision-cfdi/imagenes/cal-base-aut3.png?raw=1\" width=\"800\"> \n",
         "</center>"
       ]
     },
